--- a/all-chemon-ene-2026.html
+++ b/all-chemon-ene-2026.html
@@ -144,7 +144,7 @@
         .expected-marker { color: var(--cyan) !important; }
         .top-marker { color: var(--pink) !important; }
 
-        /* MANDAMIENTOS */
+        /* MANDAMIENTOS GRID */
         .mandamientos-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 20px; width: 100%; }
         .mandamiento-card { background: var(--white); padding: 20px; border-radius: 15px; box-shadow: 0 10px 20px rgba(0,0,0,0.05); border-top: 5px solid var(--navy); }
         .mandamiento-card h4 { font-size: 15px; margin-bottom: 8px; }
@@ -276,7 +276,6 @@
                     <div class="card">
                         <h4 style="font-size: 14px; margin-bottom: 20px; color: var(--navy);">La Campana de Desempeño</h4>
                         <div class="gauss-container">
-                            <!-- SVG Gauss Curve -->
                             <svg class="gauss-svg" viewBox="0 0 400 100" preserveAspectRatio="none">
                                 <path d="M0,100 C100,100 150,0 200,0 C250,0 300,100 400,100" fill="rgba(56, 182, 255, 0.1)" stroke="var(--navy)" stroke-width="3"/>
                                 <line x1="200" y1="0" x2="200" y2="100" stroke="var(--cyan)" stroke-dasharray="4" stroke-width="2" />
@@ -406,7 +405,30 @@
             </div>
         </div>
 
-        <!-- Slide 13: Agenda Título -->
+        <!-- Slide 13: Programa de Referidos (NUEVA) -->
+        <div class="slide bg-gray">
+            <h2 class="slide-title">Programa de Referidos</h2>
+            <div class="content-area">
+                <div class="two-column">
+                    <div class="card" style="border-top: 8px solid var(--cyan);">
+                        <h3 style="color: var(--navy); font-size: 28px; margin-bottom: 15px;">Comisión por Referencia</h3>
+                        <span class="pulse" style="font-size: 80px;">5%</span>
+                        <p style="font-size: 18px; margin-top: 10px; text-transform: none; color: #444;">De lo pagado por el cliente referido.</p>
+                    </div>
+                    <div style="text-align: left;">
+                        <h3 style="color: var(--navy); margin-bottom: 15px;">Reglas del Programa</h3>
+                        <ul class="benefit-list" style="font-size: 16px; text-transform: none;">
+                            <li><i class="fa-solid fa-calendar-check"></i> <strong>Pago:</strong> Primeros 5 días del mes siguiente al pago del cliente.</li>
+                            <li><i class="fa-solid fa-users"></i> <strong>Alcance:</strong> Empleados (excepto ventas) y externos.</li>
+                            <li><i class="fa-solid fa-user-shield"></i> <strong>Vendedores:</strong> No aplica (tienen sus propias comisiones).</li>
+                            <li><i class="fa-solid fa-network-wired"></i> <strong>Ventas:</strong> Sí aplica para sus conocidos o gente que les refiera.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Slide 14: Agenda Título -->
         <div class="slide bg-navy">
             <div class="content-area section-header">
                 <h2>Agenda</h2>
@@ -415,7 +437,7 @@
             </div>
         </div>
 
-        <!-- Slide 14: Calendario -->
+        <!-- Slide 15: Calendario -->
         <div class="slide bg-gray">
             <h2 class="slide-title">Calendario</h2>
             <div class="content-area">
@@ -432,7 +454,7 @@
             </div>
         </div>
 
-        <!-- Slide 15: Talento Título -->
+        <!-- Slide 14: Talento Título -->
         <div class="slide bg-navy">
             <div class="content-area section-header">
                 <h2>Talento</h2>
@@ -441,7 +463,7 @@
             </div>
         </div>
 
-        <!-- Slide 16: Samantha -->
+        <!-- Slide 17: Samantha -->
         <div class="slide">
             <h2 class="slide-title">Bienvenida</h2>
             <div class="content-area" style="text-align: center;">
@@ -452,7 +474,7 @@
             </div>
         </div>
 
-        <!-- Slide 17: AMA -->
+        <!-- Slide 18: AMA -->
         <div class="slide bg-gray">
             <h2 class="slide-title">AMA</h2>
             <div class="content-area" style="text-align: center;">
@@ -462,7 +484,7 @@
             </div>
         </div>
 
-        <!-- Slide 18: Cierre -->
+        <!-- Slide 19: Cierre -->
         <div class="slide bg-navy">
             <div class="content-area" style="text-align: center;">
                 <h2 style="font-size: 60px;">¡VAMOS POR MÁS!</h2>
